@@ -1,22 +1,8 @@
-FROM alpine:3.20
-ARG USER
-ENV USER=tomcat
-ARG UID=1000
-ARG GID
-ENV GID=$UID
-ARG GROUPNAME
-ENV GROUPNAME=$USER
-RUN apk add openjdk21
-ADD --checksum=sha256:25f1e607f17ee2fa99e329eec23b6393ab9e1390929c6cdcb31f749576b94d8e https://dlcdn.apache.org/tomcat/tomcat-10/v10.1.40/bin/apache-tomcat-10.1.40.tar.gz /opt 
-RUN addgroup $GROUPNAME \
-	&& adduser -G $GROUPNAME --disabled-password --gecos "" $USER \
-    && cd /opt \
-    && mkdir tomcat \
-    && tar xzf apache-tomcat-10.1.40.tar.gz  -C tomcat --strip-components 1 \ 
-    && chown -R tomcat:tomcat tomcat \
-    && rm -fr apache-tomcat-10.1.40.tar.gz
-ADD --chown=tomcat:tomcat --checksum=sha256:19018d1078689d5602e0a3ebe3653a05c6c96b20156cf2db08fae068749186ae https://buildservice.bluespice.com/webservices/4.5.x/BShtml2PDF.war  /opt/tomcat/webapps/BShtml2PDF.war
-ENV JAVA_OPTS="-Xverify:none"
-USER tomcat
+FROM eclipse-temurin:21-jre-alpine
+ARG SHA256sum=15d17bc6fe6e463647063ba1db0f6bcad0736eeac53be8510e779da1750d0e1b
+ADD --checksum=sha256:$SHA256sum https://github.com/hallowelt/webservice-html2pdf/releases/download/1.0.2/html2pdf.jar /app/html2pdf.jar
+WORKDIR /app
+
 EXPOSE 8080
-ENTRYPOINT [ "/opt/tomcat/bin/catalina.sh","run" ]
+
+CMD ["java", "-jar", "html2pdf.jar"]
